[gd_scene format=3 uid="uid://b5kousmm58lgw"]

[ext_resource type="Script" uid="uid://dydnwomy13dm7" path="res://addons/csg_plus/scene/toolbars/UpperToolbar.gd" id="1_nyxal"]
[ext_resource type="Texture2D" uid="uid://sg7a5rxx87tl" path="res://addons/csg_plus/resources/icons/plenticons/dotspark-all.png" id="2_fl1m2"]
[ext_resource type="Texture2D" uid="uid://bybsdegaognq1" path="res://addons/csg_plus/resources/icons/plenticons/cube-node-upgraded.png" id="3_h3ase"]
[ext_resource type="Texture2D" uid="uid://dpl3d3nu68alw" path="res://addons/csg_plus/resources/icons/plenticons/cube-node-selected.png" id="3_k0orr"]
[ext_resource type="Texture2D" uid="uid://bw3hdlcqqpb2c" path="res://addons/csg_plus/resources/icons/plenticons/cube-line-selected.png" id="4_ipqao"]
[ext_resource type="Texture2D" uid="uid://b75jsolbbi5t" path="res://addons/csg_plus/resources/icons/plenticons/cube-face-selected.png" id="5_rarxp"]
[ext_resource type="Texture2D" uid="uid://bff82x8ppxrs1" path="res://addons/csg_plus/resources/icons/plenticons/cube-yellow.png" id="6_jxetx"]

[node name="HBoxContainer" type="HBoxContainer" unique_id=1641561759]
offset_right = 220.0
offset_bottom = 35.0
script = ExtResource("1_nyxal")
metadata/_edit_lock_ = false

[node name="ModeSelector" type="HBoxContainer" parent="." unique_id=1194429564]
unique_name_in_owner = true
layout_mode = 2

[node name="DefaultMode" type="Button" parent="ModeSelector" unique_id=574851560]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Godot Default Edit Mode"
icon = ExtResource("2_fl1m2")
expand_icon = true
metadata/_edit_lock_ = false

[node name="UpgradeNode" type="MenuButton" parent="ModeSelector" unique_id=1093393140]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Upgrade MeshInstance3D or CSObject to CSGPlus"
icon = ExtResource("3_h3ase")
expand_icon = true
item_count = 2
popup/item_0/text = "Convert Only Selected to CSGPlus"
popup/item_0/id = 0
popup/item_1/text = "Convert Stack to CSGPlus"
popup/item_1/id = 1
metadata/_edit_lock_ = false

[node name="PointMode" type="Button" parent="ModeSelector" unique_id=2069964989]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Edit Point Mode"
icon = ExtResource("3_k0orr")
flat = true
expand_icon = true
metadata/_edit_lock_ = false

[node name="LineMode" type="Button" parent="ModeSelector" unique_id=1657675580]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Edit Line Mode"
icon = ExtResource("4_ipqao")
flat = true
expand_icon = true
metadata/_edit_lock_ = false

[node name="FaceMode" type="Button" parent="ModeSelector" unique_id=320695751]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Edit Face Mode"
icon = ExtResource("5_rarxp")
flat = true
expand_icon = true
metadata/_edit_lock_ = false

[node name="CreateMode" type="Button" parent="ModeSelector" unique_id=2126921300]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Create CSGPlus Node"
icon = ExtResource("6_jxetx")
flat = true
expand_icon = true
metadata/_edit_lock_ = false

[connection signal="pressed" from="ModeSelector/DefaultMode" to="." method="set_default_mode"]
[connection signal="pressed" from="ModeSelector/PointMode" to="." method="set_node_mode"]
[connection signal="pressed" from="ModeSelector/LineMode" to="." method="_on_line_mode_pressed"]
[connection signal="pressed" from="ModeSelector/FaceMode" to="." method="_on_face_mode_pressed"]
[connection signal="pressed" from="ModeSelector/CreateMode" to="." method="_on_create_mode_pressed"]
